Add truffle as a package dependency to the smart contract subproject, and check in the lockfile

--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -20,6 +20,7 @@
     "abi-to-sol": "^0.2.1",
     "chai": "^4.3.4",
     "solidity-coverage": "^0.7.16",
+    "truffle": "^5.4.8",
     "typechain": "^5.1.2",
     "typescript": "^4.3.4"
   },
