Add support for meta-transactions with ERC712 forwarder contracts, enabling the use of external gas payers

--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "npx hardhat test",
     "deploy": "npx hardhat deploy",
+    "local": "hardhat node",
     "build": "truffle compile && typechain --target truffle-v5 --out-dir types/truffle-contracts './build/contracts/*.json'"
   },
   "author": "Secured Finance",
