Added CI for ethereum smart contracts

--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npx hardhat test",
-    "deploy": "npx hardhat deploy",
+    "test": "hardhat test",
+    "deploy": "hardhat deploy",
     "local": "hardhat node",
     "build": "truffle compile && typechain --target truffle-v5 --out-dir types/truffle-contracts './build/contracts/*.json'"
   },
