--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -7,7 +7,7 @@
     "precompile": "rm -rf dist",
     "compile": "tsc -p tsconfig.json",
     "lint": "eslint lib/ src/ test/ --ext .ts",
-    "build": "npm run compile && tsc -b && oclif-dev manifest && oclif-dev readme",
+    "build": "yarn compile && tsc -b && oclif-dev manifest && oclif-dev readme",
     "postbuild": "rm -f oclif.manifest.json",
     "test": "ts-mocha src/*.test.ts src/**/*.test.ts",
     "posttest": "eslint . --ext .ts --config .eslintrc",
@@ -34,8 +34,7 @@
     "@oclif/plugin-not-found": "^1.2.4",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.4.2",
-    "gas-price-oracle": "^0.3.3",
-    "typescript": "^4.3.5"
+    "gas-price-oracle": "^0.3.3"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -57,7 +56,8 @@
     "prettier": "2.3.2",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.1.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=10.0.0"
