--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -28,6 +28,11 @@
   ],
   "homepage": "https://github.com/identity-com/on-chain-identity-gateway",
   "dependencies": {
+    "@ethersproject/abi": "^5.6.0",
+    "@ethersproject/abstract-provider": "^5.6.0",
+    "@ethersproject/bignumber": "^5.6.0",
+    "@ethersproject/providers": "^5.6.2",
+    "@ethersproject/transactions": "^5.6.0",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
@@ -39,9 +44,9 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
+    "@types/chai": "^4.3.0",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.0.0",
-    "@types/chai": "^4.3.0",
     "@types/node": "^16.4.7",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
