--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -33,8 +33,8 @@
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/providers": "^5.6.2",
     "@ethersproject/transactions": "^5.6.0",
-    "@oclif/command": "^1.8.0",
-    "@oclif/config": "^1.17.0",
+    "@oclif/core": "^1.6.3",
+    "@oclif/plugin-version": "^1.0.4",
     "@oclif/plugin-help": "^3.2.2",
     "@oclif/plugin-not-found": "^1.2.4",
     "bignumber.js": "^9.0.1",
@@ -74,8 +74,12 @@
     "bin": "gateway-eth-ts",
     "plugins": [
       "@oclif/plugin-help",
-      "@oclif/plugin-not-found"
-    ]
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-version"
+    ],
+    "additionalHelpFlags": ["-h"],
+    "additionalVersionFlags": ["-v"],
+    "topicSeparator": " "
   },
   "types": "dist/index.d.ts",
   "ts-node": {
