--- a/gateway-eth-ts/.eslintrc
+++ b/gateway-eth-ts/.eslintrc
@@ -1,23 +1,14 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "extends": [
-      "oclif",
-      "oclif-typescript",
-      "prettier"
-    ],
-    "rules": {
-      "no-return-await": "warn",
-      "node/no-missing-import": ["error", {
-        "tryExtensions": [".js", ".ts", ".node"]
-      }],
-      "max-params": 0,
-      "eqeqeq": "warn",
-      "no-eq-null": "warn",
-      "unicorn/prefer-node-protocol": "off",
-      "unicorn/no-array-for-each": "off",
-      "unicorn/filename-case": "off",
-      "max-statements-per-line": "warn"
-    }
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "oclif",
+    "oclif-typescript",
+    "prettier",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  ],
+  "rules": {
+    "@typescript-eslint/no-implicit-any-catch": "error"
+  }
 }
