--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "precompile": "rm -rf dist",
     "compile": "tsc -p tsconfig.json",
-    "lint": "eslint lib/ src/ test/ --ext .ts",
+    "lint": "eslint src/ --ext .ts",
     "build": "yarn compile && tsc -b && oclif-dev manifest && oclif-dev readme",
     "postbuild": "rm -f oclif.manifest.json",
     "test": "ts-mocha src/*.test.ts src/**/*.test.ts",
@@ -34,9 +34,9 @@
     "@ethersproject/providers": "^5.6.2",
     "@ethersproject/transactions": "^5.6.0",
     "@oclif/core": "^1.6.3",
-    "@oclif/plugin-version": "^1.0.4",
     "@oclif/plugin-help": "^3.2.2",
     "@oclif/plugin-not-found": "^1.2.4",
+    "@oclif/plugin-version": "^1.0.4",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.4.2",
     "gas-price-oracle": "^0.3.3"
@@ -48,8 +48,8 @@
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
@@ -77,8 +77,12 @@
       "@oclif/plugin-not-found",
       "@oclif/plugin-version"
     ],
-    "additionalHelpFlags": ["-h"],
-    "additionalVersionFlags": ["-v"],
+    "additionalHelpFlags": [
+      "-h"
+    ],
+    "additionalVersionFlags": [
+      "-v"
+    ],
     "topicSeparator": " "
   },
   "types": "dist/index.d.ts",
