feature: Started fixing lint issues.

--- a/gateway-eth-ts/tsconfig.json
+++ b/gateway-eth-ts/tsconfig.json
@@ -11,6 +11,8 @@
       "strictNullChecks": false,
       "allowJs": true,
       "checkJs": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
     },
     "include": [
       "src/**/*"
