--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "precompile": "rm -rf dist",
+    "gen-typed-abi-interface": "abi-types-generator './src/lib/abis/FlagsStorage.json' --output='./src/lib/' --name=FlagsStorage --provider=ethers_v5",
     "compile": "tsc -p tsconfig.json",
     "lint": "eslint src/ --ext .ts",
     "build": "yarn compile && tsc -b && oclif-dev manifest && oclif-dev readme",
@@ -57,6 +58,7 @@
     "eslint-config-oclif-typescript": "^0.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "ethereum-abi-types-generator": "^1.3.2",
     "mocha": "^9.0.3",
     "nyc": "^15.1.0",
     "oclif": "^1.18.1",
