--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -4,14 +4,17 @@
   "description": "Adapter library for Identity.com gateway token system on Ethereum",
   "main": "dist/index.js",
   "scripts": {
-    "precompile": "rm -rf dist",
-    "gen-typed-abi-interface": "abi-types-generator './src/lib/abis/FlagsStorage.json' --output='./src/lib/' --name=FlagsStorage --provider=ethers_v5",
+    "precompile": "rm -rf dist && yarn gen-contracts",
     "compile": "tsc -p tsconfig.json",
     "lint": "eslint src/ --ext .ts",
     "build": "yarn compile && tsc -b && oclif-dev manifest && oclif-dev readme",
     "postbuild": "rm -f oclif.manifest.json",
     "test": "ts-mocha src/*.test.ts src/**/*.test.ts",
     "posttest": "eslint . --ext .ts --config .eslintrc",
+    "gen-contracts": "yarn gen-contract-flags-storage && yarn gen-contract-gateway-token && yarn gen-contract-gateway-token-controller",
+    "gen-contract-flags-storage": "abi-types-generator './src/lib/abis/FlagsStorage.json' --output='./src/lib/gen/' --name=FlagsStorageContract --provider=ethers_v5",
+    "gen-contract-gateway-token": "abi-types-generator './src/lib/abis/GatewayToken.json' --output='./src/lib/gen/' --name=GatewayTokenContract --provider=ethers_v5",
+    "gen-contract-gateway-token-controller": "abi-types-generator './src/lib/abis/GatewayTokenController.json' --output='./src/lib/gen/' --name=GatewayTokenControllerContract --provider=ethers_v5",
     "version": "oclif-dev readme"
   },
   "repository": "git@github.com:identity-com/on-chain-identity-gateway.git",
@@ -58,7 +61,6 @@
     "eslint-config-oclif-typescript": "^0.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "ethereum-abi-types-generator": "^1.3.2",
     "mocha": "^9.0.3",
     "nyc": "^15.1.0",
     "oclif": "^1.18.1",
