--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@ethersproject/abi": "^5.6.0",
     "@ethersproject/abstract-provider": "^5.6.0",
+    "@ethersproject/abstract-signer": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/providers": "^5.6.2",
     "@ethersproject/transactions": "^5.6.0",
