--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@identity.com/gateway-eth-ts",
-  "version": "0.0.12",
+  "version": "0.1.0-beta.1",
   "description": "Adapter library for Identity.com gateway token system on Ethereum",
   "main": "dist/index.js",
   "scripts": {
