--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -22,16 +22,18 @@
     "chai": "^4.3.4",
     "solidity-coverage": "^0.7.16",
     "truffle": "^5.4.8",
-    "typechain": "^5.1.2",
-    "typescript": "^4.3.4"
+    "typechain": "^8.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.11",
+    "@typechain/hardhat": "^6.0.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.3",
     "ganache-time-traveler": "^1.0.16",
@@ -40,6 +42,7 @@
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.8.11",
     "hardhat-gas-reporter": "^1.0.4",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "ts-node": "^10.7.0"
   }
 }
