--- a/smart-contract/tsconfig.json
+++ b/smart-contract/tsconfig.json
@@ -1,28 +1,14 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "declaration": true,
-      "removeComments": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "target": "es2017",
-      "sourceMap": true,
-      "outDir": "./dist",
-      "skipLibCheck": true,
-      "resolveJsonModule": true
-    },
-    "exclude": ["node_modules"],
-    "typeAcquisition": {
-      "include": [
-        "jest"
-      ]
-    },
-    "include": [
-      "./scripts",
-      "./deploy",
-      "./test"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
+  "include": ["./scripts", "./test", "./deploy", "./tasks"],
+  "files": [
+    "./hardhat.config.ts"
+  ]
 }
