add: separated deployment, migrate test to TS

--- a/smart-contract/tsconfig.json
+++ b/smart-contract/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "target": "es5",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": false, 
   },
   "include": ["./scripts", "./test", "./deploy", "./tasks"],
   "files": [
