--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -8,9 +8,13 @@
   },
   "scripts": {
     "test": "hardhat test",
-    "deploy": "hardhat deploy",
+    "deploy:localhost": "hardhat deploy --network localhost",
+    "deploy:hardhat": "hardhat deploy --network hardhat",
+    "deploy:ropsten": "hardhat deploy --network ropsten",
+    "deploy:rinkeby": "hardhat deploy --network rinkeby",
+    "deploy:mainnet": "hardhat deploy --network mainnet",
     "local": "hardhat node",
-    "build": "truffle compile && typechain --target truffle-v5 --out-dir types/truffle-contracts './build/contracts/*.json'"
+    "build": "hardhat compile"
   },
   "author": "Secured Finance",
   "license": "MIT",
@@ -19,7 +23,7 @@
     "@truffle/hdwallet-provider": "^1.4.1",
     "@typechain/truffle-v5": "^5.0.0",
     "abi-to-sol": "^0.2.1",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "solidity-coverage": "^0.7.16",
     "truffle": "^5.4.8",
     "typechain": "^8.0.0",
@@ -33,7 +37,11 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.11",
+    "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.24",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.3",
     "ganache-time-traveler": "^1.0.16",
@@ -44,5 +52,11 @@
     "hardhat-gas-reporter": "^1.0.4",
     "truffle-assertions": "^0.9.2",
     "ts-node": "^10.7.0"
+  },
+  "workspaces": {
+    "nohoist": [
+      "**/typechain",
+      "**/@typechain/*"
+    ]
   }
 }
