--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -2,7 +2,6 @@
   "name": "civic-gateway-tokens",
   "version": "0.0.1",
   "description": "Identity.com Gateway Tokens ethereum smart contracts",
-  "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
@@ -20,19 +19,15 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
-    "@truffle/hdwallet-provider": "^1.4.1",
-    "@typechain/truffle-v5": "^5.0.0",
     "abi-to-sol": "^0.2.1",
     "chai": "^4.3.6",
     "solidity-coverage": "^0.7.16",
-    "truffle": "^5.4.8",
     "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.9",
@@ -43,6 +38,7 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.24",
     "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.3",
     "ganache-time-traveler": "^1.0.16",
     "hardhat": "^2.5.0",
