--- a/smart-contract/.env.example
+++ b/smart-contract/.env.example
@@ -1,6 +1,9 @@
 COINMARKETCAP_API_KEY=
 INFURA_API_KEY=
 ETHERSCAN_API_KEY=
-MNEMONIC=test test test test test test test test test test test junk
-PRIVATE_KEY=
-MNEMONIC_PATH="m/44'/60'/0'/0/"
+# The key used to deploy the contracts
+DEPLOYER_PRIVATE_KEY=
+# The key assigned as the gatekeeper network authority
+AUTHORITY_PRIVATE_KEY=
+# The address of the first gatekeeper
+GATEKEEPER_ADDRESS=
