--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -14,9 +14,9 @@
   "author": "Secured Finance",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@solvprotocol/erc-3525": "^1.1.0",
     "abi-to-sol": "^0.2.1",
-    "chai": "^4.3.6",
     "solidity-coverage": "^0.7.16",
     "typechain": "^8.1.0",
     "typescript": "^4.6.3"
@@ -33,6 +33,7 @@
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.24",
+    "chai": "^4.3.6",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.3",
