--- a/gatekeeper-cli/package.json
+++ b/gatekeeper-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@identity.com/ethereum-gatekeeper-cli",
-  "version": "0.0.1-alpha.2",
+  "name": "@identity.com/gateway-eth-cli",
+  "version": "0.0.3",
   "description": "Identity.com Gateway Protocol EVM CLI",
   "author": "dankelleher @dankelleher",
   "bin": {
@@ -25,8 +25,9 @@
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@ethersproject/web": "^5.7.1",
-    "@identity.com/gateway-eth-ts": "0.3.0-alpha.1",
+    "@identity.com/gateway-eth-ts": "0.3.0-alpha.4",
     "@oclif/core": "^1.23.2",
+    "@oclif/dev-cli": "^1.26.10",
     "@oclif/plugin-help": "^5",
     "gas-price-oracle": "^0.5.2"
   },
@@ -52,16 +53,10 @@
     "commands": "./dist/commands",
     "plugins": [
       "@oclif/plugin-help"
-    ],
-    "topicSeparator": " ",
-    "topics": {
-      "hello": {
-        "description": "Say hello to the world and others"
-      }
-    }
+    ]
   },
   "scripts": {
-    "build": "shx rm -rf dist && tsc -b",
+    "build": "rm -rf dist && tsc -b && oclif-dev manifest && oclif-dev readme",
     "lint": "eslint . --ext .ts --config .eslintrc",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
