--- a/gatekeeper-cli/package.json
+++ b/gatekeeper-cli/package.json
@@ -25,7 +25,7 @@
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@ethersproject/web": "^5.7.1",
-    "@identity.com/gateway-eth-ts": "0.3.0-alpha.4",
+    "@identity.com/gateway-eth-ts": "0.3.0",
     "@oclif/core": "^1.23.2",
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/plugin-help": "^5",
