--- a/gatekeeper-cli/package.json
+++ b/gatekeeper-cli/package.json
@@ -25,7 +25,7 @@
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@ethersproject/web": "^5.7.1",
-    "@identity.com/gateway-eth-ts": "0.3.1",
+    "@identity.com/gateway-eth-ts": "0.4.0",
     "@oclif/core": "^1.23.2",
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/plugin-help": "^5",
@@ -61,7 +61,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "mocha --forbid-only \"src/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
