--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@identity.com/gateway-eth-ts",
-  "version": "0.5.6",
+  "version": "0.5.7",
   "description": "Adapter library for Identity.com gateway token system on Ethereum",
   "main": "dist/index.js",
   "scripts": {
@@ -33,7 +33,8 @@
     "eth-sig-util": "2.1.1",
     "ethers": "^5.7.2",
     "gas-price-oracle": "^0.3.3",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -54,7 +55,6 @@
     "prettier": "2.3.2",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.1.0",
-    "tslib": "^2.3.0",
     "typedoc": "^0.23.24",
     "typescript": "^4.3.5"
   },
