--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -6,10 +6,14 @@
     "test": "test"
   },
   "scripts": {
+    "analyze": "slither . --config-file slither.config.json",
     "test": "NODE_ENV=test hardhat test",
     "deploy": "hardhat deploy --network $1",
     "local": "hardhat node",
-    "build": "hardhat compile"
+    "build": "hardhat compile",
+    "lint:sol": "solhint --config .solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+    "prettier:write": "prettier --config prettier.config.js --write '**/*.{js,md,sol,ts,json}'",
+    "prettier:check": "prettier --config prettier.config.js --check '**/*.{js,md,sol,ts,json}'"
   },
   "author": "Daniel Kelleher",
   "license": "MIT",
@@ -23,6 +27,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "@nomiclabs/hardhat-solhint": "^3.0.0",
     "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.11",
@@ -42,15 +47,13 @@
     "hardhat-contract-sizer": "^2.8.0",
     "hardhat-deploy": "^0.11.22",
     "hardhat-gas-reporter": "^1.0.9",
+    "solhint": "3.4.1",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.7.0",
     "typechain": "^8.1.1",
-    "typescript": "^4.6.3"
-  },
-  "workspaces": {
-    "nohoist": [
-      "**/typechain",
-      "**/@typechain/*"
-    ]
+    "typescript": "^4.6.3",
+    "prettier": "^2.8.4",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solhint-plugin-prettier": "^0.0.5"
   }
 }
