Ethereum - Format solidity

--- a/smart-contract/tsconfig.json
+++ b/smart-contract/tsconfig.json
@@ -7,11 +7,9 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "noImplicitAny": false, 
+    "noImplicitAny": false
   },
   "include": ["./scripts", "./test", "./deploy", "./tasks"],
   "exclude": ["node_modules"],
-  "files": [
-    "./hardhat.config.ts"
-  ]
+  "files": ["./hardhat.config.ts"]
 }
