--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "analyze": "slither . --config-file slither.config.json",
+    "coverage": "NODE_ENV=test hardhat coverage && istanbul check-coverage --statements 68 --branches 47 --functions 72 --lines 64",
     "test": "NODE_ENV=test hardhat test",
     "deploy": "hardhat deploy --network $1",
-    "local": "hardhat node",
+    "local": "STAGE=dev hardhat node",
     "build": "hardhat compile",
     "lint:sol": "solhint --config .solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "prettier:write": "prettier --config prettier.config.js --write '**/*.{js,md,sol,ts,json}'",
@@ -47,13 +48,13 @@
     "hardhat-contract-sizer": "^2.8.0",
     "hardhat-deploy": "^0.11.22",
     "hardhat-gas-reporter": "^1.0.9",
+    "prettier": "^2.8.4",
+    "prettier-plugin-solidity": "^1.1.3",
     "solhint": "3.4.1",
+    "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.7.0",
     "typechain": "^8.1.1",
-    "typescript": "^4.6.3",
-    "prettier": "^2.8.4",
-    "prettier-plugin-solidity": "^1.1.3",
-    "solhint-plugin-prettier": "^0.0.5"
+    "typescript": "^4.6.3"
   }
 }
