Post-audit redeploy - Fix CLI build and update version

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "workspaces": {
     "packages": [
       "smart-contract",
-      "gateway-eth-ts",
-      "gatekeeper-cli"
+      "gateway-eth-ts"
     ],
     "nohoist": [
       "**/@openzeppelin/*",
