--- a/gateway-eth-ts/tsconfig.json
+++ b/gateway-eth-ts/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "exclude": [
       "node_modules/**/*",
+      "../node_modules/**/*",
       "src/contracts/typechain-types/@solvprotocol/erc-3525/periphery/interface/**/*"
     ],
     "ts-node": {
