--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@identity.com/gateway-protocol-eth",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Identity.com Gateway Tokens ethereum smart contracts",
   "directories": {
     "test": "test"
@@ -18,7 +18,7 @@
   },
   "author": "Daniel Kelleher",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
