--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -9,8 +9,9 @@
     "analyze": "slither . --config-file slither.config.json",
     "coverage": "NODE_ENV=test hardhat coverage && istanbul check-coverage --statements 60 --branches 38 --functions 62 --lines 60",
     "test": "NODE_ENV=test hardhat test",
-    "deploy": "hardhat deploy --network $1",
-    "local": "STAGE=dev hardhat node",
+    "deploy": "hardhat deploy --tags GatewayToken --network $1",
+    "upgrade-contract": "hardhat deploy --tags UpgradeV1 --network $1",
+    "local": "STAGE=dev hardhat node --tags GatewayToken",
     "build": "hardhat compile",
     "lint:sol": "solhint --config .solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "prettier:write": "prettier --config prettier.config.js --write '**/*.{js,md,sol,ts,json}'",
