--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test hardhat test",
     "deploy": "hardhat deploy --network $1",
     "local": "STAGE=dev hardhat node",
+    "local-no-deploy": "STAGE=prod hardhat node --no-deploy",
     "build": "hardhat compile",
     "lint:sol": "solhint --config .solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "prettier:write": "prettier --config prettier.config.js --write '**/*.{js,md,sol,ts,json}'",
