--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -46,10 +46,10 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "ganache-time-traveler": "^1.0.16",
-    "hardhat": "2.14.0",
-    "hardhat-abi-exporter": "^2.2.1",
-    "hardhat-contract-sizer": "^2.8.0",
-    "hardhat-deploy": "^0.11.22",
+    "hardhat": "^2.18.2",
+    "hardhat-abi-exporter": "^2.10.1",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-deploy": "^0.11.43",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.3",
