--- a/gatekeeper-cli/package.json
+++ b/gatekeeper-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@identity.com/gateway-eth-cli",
-  "version": "0.2.1",
+  "version": "0.2.2-alpha.0",
   "description": "Identity.com Gateway Protocol EVM CLI",
   "author": "dankelleher @dankelleher",
   "bin": {
@@ -25,7 +25,7 @@
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@ethersproject/web": "^5.7.1",
-    "@identity.com/gateway-eth-ts": "0.8.0",
+    "@identity.com/gateway-eth-ts": "0.8.1-alpha.2",
     "@oclif/core": "^1.23.2",
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/plugin-help": "^5",
