--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -10,10 +10,11 @@
     "coverage": "NODE_ENV=test hardhat coverage && istanbul check-coverage --statements 97 --branches 90 --functions 95 --lines 93",
     "test": "NODE_ENV=test hardhat test",
     "deploy": "hardhat deploy --tags GatewayToken --network $1",
-    "deploy-forwarder": "hardhat deploy --tags Forwarder --network $1",
-    "upgrade-contract": "hardhat deploy --tags UpgradeV2 --network $1",
+    "deploy-preserve-contract-addresses": "scripts/deployFull.sh $1",
+    "upgrade-contracts": "hardhat deploy --tags UpgradeV2 --network $1",
     "local": "STAGE=dev hardhat node --tags TestSetup",
     "local-no-deploy": "STAGE=prod hardhat node --no-deploy",
+    "clean": "rm -rf ./cache/ ./build/",
     "build": "hardhat compile",
     "lint:sol": "solhint --config .solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "prettier:write": "prettier --config prettier.config.js --write '**/*.{js,md,sol,ts,json}'",
