--- a/.github/.github/workflows/ethereum-smart-contract.yml
+++ b/.github/.github/workflows/ethereum-smart-contract.yml
@@ -2,7 +2,7 @@ name: Ethereum Smart Contract
 on:
   push:
     paths:
-      - 'ethereum/smart-contract/**'
+      - 'smart-contract/**'
       - '.github/**'
   pull_request:
 jobs:
