--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -19,7 +19,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./ethereum/gateway-eth-ts
+        working-directory: ./gateway-eth-ts
 
     steps:
       - name: Checkout repo
@@ -35,7 +35,7 @@ jobs:
         with:
           path: |
             ./node_modules
-          key: yarn-ethereum-${{ hashFiles('ethereum/yarn.lock') }}
+          key: yarn-ethereum-${{ hashFiles('yarn.lock') }}
 
       - name: NPM login
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
