--- a/.github/workflows/ethereum-smart-contract.yml
+++ b/.github/workflows/ethereum-smart-contract.yml
@@ -51,4 +51,4 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           INFURA_KEY: ${{ secrets.INFURA_KEY }}
-        run: yarn test
+        run: yarn coverage
