Update env.example and abstract signer resolution from deployment scripts

--- a/smart-contract/.env.example
+++ b/smart-contract/.env.example
@@ -1,9 +1,9 @@
-COINMARKETCAP_API_KEY=
-INFURA_API_KEY=
-ETHERSCAN_API_KEY=
-# The key used to deploy the contracts
-DEPLOYER_PRIVATE_KEY=
-# The key assigned as the gatekeeper network authority
-AUTHORITY_PRIVATE_KEY=
-# The address of the first gatekeeper
-GATEKEEPER_ADDRESS=
+DEFENDER_API_KEY=
+DEFENDER_RELAY_API_KEY=
+DEFENDER_RELAY_SECRET=
+DEFENDER_SECRET=
+BSC_SCAN_API_KEY=
+SHOULD_USE_DEFENDER=
+BNB_TESTNET_RPC_URL=	
+BSC_TESTNET_RELAYER=
+LOCAL_DEPLOY_PRIVATE_KEY=
