--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Install
         run: yarn
 
-      - name: Lint
-        run: yarn lint
+      # - name: Lint
+      #   run: yarn lint
 
       - name: Build dependencies
         run: (cd ../smart-contract && yarn && yarn build)
