--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'gateway-eth-ts/**'
       - '.github/**'
+
 jobs:
   ethereum-build:
     name: Build, lint and test the ethereum libraries on ${{ matrix.os }}
@@ -46,10 +47,10 @@ jobs:
       - name: Build dependencies
         run: (cd ../smart-contract && yarn && yarn build)
 
+      - name: Run Anvil Node
+      run: anvil --fork-url ${{ env.BNB_TESTNET_RPC_URL }} &
+
       - name: Run tests
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          INFURA_KEY: ${{ secrets.INFURA_KEY }}
         run: yarn test-local
 
       - name: Build
