--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
       - name: Use Node ${{ matrix.node }}
         uses: actions/setup-node@v1
         with:
