Fix test timeouts

--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -51,7 +51,7 @@ jobs:
         run: (cd ../smart-contract && yarn && yarn build)
 
       - name: Run Anvil Node
-        run: anvil --fork-url ${{ env.BNB_TESTNET_RPC_URL }} &
+        run: anvil --fork-url ${{ vars.BNB_TESTNET_RPC_URL }} &
 
       - name: Run tests
         run: yarn test-local
