--- a/.github/workflows/ethereum-ts.yml
+++ b/.github/workflows/ethereum-ts.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'gateway-eth-ts/**'
       - '.github/**'
+
 jobs:
   ethereum-build:
     name: Build, lint and test the ethereum libraries on ${{ matrix.os }}
@@ -21,6 +22,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
       - name: Use Node ${{ matrix.node }}
         uses: actions/setup-node@v1
@@ -40,17 +44,20 @@ jobs:
       - name: Install
         run: yarn
 
-      - name: Lint
-        run: yarn lint
+      # - name: Lint
+      #   run: yarn lint
 
       - name: Build dependencies
         run: (cd ../smart-contract && yarn && yarn build)
 
+      - name: Create Typechain Typescript type
+        run: yarn copy-contracts
+
+      - name: Run Anvil Node
+        run: anvil --fork-url ${{ vars.BNB_TESTNET_RPC_URL }} &
+
       - name: Run tests
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          INFURA_KEY: ${{ secrets.INFURA_KEY }}
-        run: yarn test
+        run: yarn test-local
 
       - name: Build
         run: yarn build
