--- a/gateway-ui/package.json
+++ b/gateway-ui/package.json
@@ -18,10 +18,18 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/material": "^5.15.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ethers": "^5.7.2"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
