--- a/gateway-ui/package.json
+++ b/gateway-ui/package.json
@@ -15,6 +15,7 @@
     "@storybook/test": "^7.6.17",
     "init": "^0.1.2",
     "storybook": "^7.6.17",
+    "storybook-addon-manual-mocks": "^1.0.4",
     "typescript": "^5.4.2"
   },
   "dependencies": {
@@ -24,9 +25,9 @@
     "@mui/material": "^5.15.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ethers": "^5.7.2"
+    "react-dom": "^18.2.0"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
