--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -28,6 +28,7 @@
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@types/ramda": "^0.28.14",
+    "axios": "^1.6.8",
     "bignumber.js": "^9.0.1",
     "debug": "^4.3.4",
     "eth-sig-util": "2.1.1",
@@ -52,6 +53,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^9.0.3",
+    "nock": "^13.5.4",
     "nyc": "^15.1.0",
     "prettier": "2.3.2",
     "ts-mocha": "^8.0.0",
