Validate gatewayIssuerEndpoint has valid web uri format

--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -35,7 +35,8 @@
     "ethers": "^5.7.2",
     "gas-price-oracle": "^0.3.3",
     "ramda": "^0.28.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@openzeppelin/defender-relay-client": "^1.54.1",
