--- a/gateway-eth-ts/package.json
+++ b/gateway-eth-ts/package.json
@@ -28,13 +28,15 @@
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@types/ramda": "^0.28.14",
+    "axios": "^1.6.8",
     "bignumber.js": "^9.0.1",
     "debug": "^4.3.4",
     "eth-sig-util": "2.1.1",
     "ethers": "^5.7.2",
     "gas-price-oracle": "^0.3.3",
     "ramda": "^0.28.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@openzeppelin/defender-relay-client": "^1.54.1",
@@ -52,6 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^9.0.3",
+    "nock": "^13.5.4",
     "nyc": "^15.1.0",
     "prettier": "2.3.2",
     "ts-mocha": "^8.0.0",
