--- a/gateway-ui/package.json
+++ b/gateway-ui/package.json
@@ -26,9 +26,15 @@
     "@mui/material": "^5.15.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
